--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     "@dnd-kit/core": "6.1.0",
     "@dnd-kit/sortable": "8.0.0",
     "@dnd-kit/utilities": "3.2.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-router-dom": "6.23.0"
+    "axios": "^1.6.8",
+    "leaflet": "1.9.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-leaflet": "4.2.1",
+    "react-router-dom": "6.23.1"
   },
   "devDependencies": {
     "@types/react": "18.2.66",
